--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^20.11.27",
     "esbuild": "^0.20.1",
     "jest": "^29.7.0",
+    "peggy": "^4.0.2",
     "prettier": "^3.2.5",
     "ts-jest": "^29.1.2",
     "typescript": "^5.4.2"
